--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -2,47 +2,52 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>FNFL Dawgs</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-            crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+  <head>
+    <title>FNFL Dawgs</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+          crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
             integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" 
             crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-        </script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+      </script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
             crossorigin="anonymous">
-        </script>
-        <link rel="stylesheet" href="{% static 'css/fnfl.css' %}">
-        <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'lineup_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <a href="{% url 'lineup_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <a href="{% url 'lineup_list' %}" class="top-menu"><span class="glyphicon glyphicon-list"></span></a>
-            <a href="{% url 'player_usage' %}" class="top-menu"><span class="glyphicon glyphicon-asterisk"></span></a>
-            <p class="top-menu">{{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-        {% endif %}
-            <h1><a href="{% url 'welcome' %}">FNFL Dawgs</a></h1>
-        </div>
+      </script>
+      <link rel="stylesheet" href="{% static 'css/fnfl.css' %}">
+      <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <div class="page-header">
+      {% if user.is_authenticated %}
+        <a href="{% url 'lineup_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        <a href="{% url 'lineup_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        <a href="{% url 'lineup_list' %}" class="top-menu"><span class="glyphicon glyphicon-list"></span></a>
+        <a href="{% url 'player_usage' %}" class="top-menu"><span class="glyphicon glyphicon-asterisk"></span></a>
+        <p class="top-menu">{{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+      {% else %}
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+      {% endif %}
+        <h1><a href="{% url 'welcome' %}">FNFL Dawgs</a></h1>
+    </div>
         
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                {% include 'fnfl/messages.html' %}
-                {% block content %}
-                {% endblock %}
-                </div>
-            </div>
+    <div class="content container">
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          {% include 'fnfl/messages.html' %}
         </div>
-    </body>
+        <div class="col-md-6">
+        </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-12">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
