--- a/fnfl/static/css/fnfl.css
+++ b/fnfl/static/css/fnfl.css
@@ -3,16 +3,17 @@ h1 a {
 }
 
 body {
-    padding-left: 10px;
+    padding-left: 0;
 }
 
 .page-header {
     background-color: #555FED;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    margin-top: 0pt;
+    margin-right: 5pt;
+    padding-top: 10pt;
 }
 
-.page-header h1 .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: white;
     font-size: 36pt;
     text-decoration: none;
@@ -38,13 +39,12 @@ body {
     color: #ffffff;
     float: right;
     font-size: 26pt;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
-.post {
-    margin-bottom: 70px;
-}
-
-.post h1 a, .post h1 a:visited {
-    color: #000000;
+.top-menu-logout, .top-menu-logout:hover, .top-menu-logout:visited {
+    color: #ffffff;
+    float: right;
+    font-size: 16pt;
+    margin-right: 10px;
 }
