--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -21,33 +21,55 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
-    <div class="page-header">
-      {% if user.is_authenticated %}
-        <a href="{% url 'lineup_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <a href="{% url 'lineup_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-        <a href="{% url 'lineup_list' %}" class="top-menu"><span class="glyphicon glyphicon-list"></span></a>
-        <a href="{% url 'player_usage' %}" class="top-menu"><span class="glyphicon glyphicon-asterisk"></span></a>
-        <p class="top-menu">{{ user.username }}<small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-      {% else %}
-        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-      {% endif %}
-        <h1><a href="{% url 'welcome' %}">FNFL Dawgs</a></h1>
-    </div>
-        
-    <div class="content container">
+
+<body>
+  <div class="page-header">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12 col-md-6">
-          {% include 'fnfl/messages.html' %}
+        <div class="col-xs-4 col-md-6 text-left">
+          <h1>
+            <a href="{% url 'welcome' %}">FNFL Dawgs</a>
+          </h1>
         </div>
-        <div class="col-md-6">
-        </div>
-      <div class="row">
-        <div class="col-xs-12 col-md-12">
-          {% block content %}
-          {% endblock %}
+        <div class="col-xs-8 col-md-6 text-right">
+{% if user.is_authenticated %}
+          <div class="row">
+            <div class="col-xs-12 col-md-12 text-right">
+              <p class="top-menu-logout">
+                {{ user.username }} (<a style="color:white" href="{% url 'logout' %}">Log out</a>)
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-8 col-md-6 pull-right">
+              <a href="{% url 'lineup_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+              <a href="{% url 'lineup_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+              <a href="{% url 'lineup_list' %}" class="top-menu"><span class="glyphicon glyphicon-list"></span></a>
+              <a href="{% url 'player_usage' %}" class="top-menu"><span class="glyphicon glyphicon-asterisk"></span></a>
+            </div>
+          </div>
+{% else %}
+          <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+{% endif %}
         </div>
       </div>
     </div>
-  </body>
+  </div>
+        
+  <div class="content container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        {% include 'fnfl/messages.html' %}
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        {% block content %}
+        {% endblock %}
+      </div>
+    </div>
+  </div>
+</body>
 </html>
