--- a/fnfl/static/css/fnfl.css
+++ b/fnfl/static/css/fnfl.css
@@ -48,3 +48,21 @@ body {
     font-size: 16pt;
     margin-right: 10px;
 }
+
+.flex-container {
+    display: -webkit-flex;
+    display: flex;
+    width: 1000px;
+    height: 70px;
+}
+
+.flex-item-button {
+    width: 150px;
+    height: 60px;
+    margin: 10px;
+
+.flex-item-text {
+    width: 800px;
+    height: 60px;
+    margin: 10px;
+}
