--- a/fnfl/templates/fnfl/lineup_list.html
+++ b/fnfl/templates/fnfl/lineup_list.html
@@ -5,7 +5,7 @@
 {% for lineup in lineups %}
   <div>
     <h1>
-      <a href="{% url 'lineup_detail' pk=lineup.pk %}">{{ lineup.week }}</a>
+      <a href="{% url 'lineup_detail' lineup_pk=lineup.pk %}">{{ lineup.week }}</a>
     </h1>
     <div class="date">
       <p>published: {{ lineup.published_date }}</p>
