--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -7,12 +7,12 @@
         {{ lineup.published_date }}
       </div>
 {% else %} 
-      <a class="btn btn-default" href="{% url 'lineup_publish' pk=lineup.pk %}">Publish</a>
+      <a class="btn btn-default" href="{% url 'lineup_publish' lineup_pk=lineup.pk %}">Publish</a>
 {% endif %}
         
-    <a class="btn btn-default" href="{% url 'lineup_edit' pk=lineup.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-    <a class="btn btn-default" href="{% url 'lineup_remove' pk=lineup.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-    <a class="btn btn-default" href="{% url 'add_player' pk=lineup.pk %}">Add Player</a>
+    <a class="btn btn-default" href="{% url 'lineup_edit' lineup_pk=lineup.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    <a class="btn btn-default" href="{% url 'lineup_remove' lineup_pk=lineup.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+    <a class="btn btn-default" href="{% url 'add_player' lineup_pk=lineup.pk %}">Add Player</a>
     <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
 
     <h1>{{ lineup.week }}</h1>
@@ -28,10 +28,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=qb.pk %}">Edit QB</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=qb.pk %}">Remove QB</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=qb.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=qb.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=qb.pk %}">Edit QB</a></li>
+            <li><a href="{% url 'remove_player' player_pk=qb.pk %}">Remove QB</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=qb.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=qb.pk %}">Edit Score</a></li>
           </ul>
       </div>
 
@@ -52,10 +52,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=rb1.pk %}">Edit RB</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=rb1.pk %}">Remove RB</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=rb1.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=rb1.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=rb1.pk %}">Edit RB</a></li>
+            <li><a href="{% url 'remove_player' player_pk=rb1.pk %}">Remove RB</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=rb1.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=rb1.pk %}">Edit Score</a></li>
           </ul>
       </div>
 
@@ -76,10 +76,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=rb2.pk %}">Edit RB</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=rb2.pk %}">Remove RB</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=rb2.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=rb2.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=rb2.pk %}">Edit RB</a></li>
+            <li><a href="{% url 'remove_player' player_pk=rb2.pk %}">Remove RB</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=rb2.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=rb2.pk %}">Edit Score</a></li>
           </ul>
       </div>
 
@@ -100,10 +100,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=wr1.pk %}">Edit WR</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=wr1.pk %}">Remove WR</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=wr1.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=wr1.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=wr1.pk %}">Edit WR</a></li>
+            <li><a href="{% url 'remove_player' player_pk=wr1.pk %}">Remove WR</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=wr1.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=wr1.pk %}">Edit Score</a></li>
           </ul>
 
       </div>
@@ -125,10 +125,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=wr2.pk %}">Edit WR</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=wr2.pk %}">Remove WR</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=wr2.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=wr2.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=wr2.pk %}">Edit WR</a></li>
+            <li><a href="{% url 'remove_player' player_pk=wr2.pk %}">Remove WR</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=wr2.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=wr2.pk %}">Edit Score</a></li>
           </ul>
 
       </div>
@@ -150,10 +150,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=te.pk %}">Edit TE</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=te.pk %}">Remove TE</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=te.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=te.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=te.pk %}">Edit TE</a></li>
+            <li><a href="{% url 'remove_player' player_pk=te.pk %}">Remove TE</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=te.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=te.pk %}">Edit Score</a></li>
           </ul>
       </div>
 
@@ -174,10 +174,10 @@
         </button>
 
           <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' pk=lineup.pk player_pk=k.pk %}">Edit K</a></li>
-            <li><a href="{% url 'remove_player' pk=lineup.pk player_pk=k.pk %}">Remove K</a></li>
-            <li><a href="{% url 'add_score' pk=lineup.pk player_pk=k.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' pk=lineup.pk player_pk=k.pk %}">Edit Score</a></li>
+            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=k.pk %}">Edit K</a></li>
+            <li><a href="{% url 'remove_player' player_pk=k.pk %}">Remove K</a></li>
+            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=k.pk %}">Add Score</a></li>
+            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=k.pk %}">Edit Score</a></li>
           </ul>
 
       </div>
