--- a/fnfl/templates/fnfl/lineup_draft_list.html
+++ b/fnfl/templates/fnfl/lineup_draft_list.html
@@ -4,7 +4,7 @@
     
 {% for lineup in lineups %}
   <div>
-    <h1><a href="{% url 'lineup_detail' pk=lineup.pk %}">{{ lineup.week }}</a></h1>
+    <h1><a href="{% url 'lineup_detail' lineup_pk=lineup.pk %}">{{ lineup.week }}</a></h1>
 {% for p in lineup.player.all %}
   {% if p.position == "QB" %}
     <p>{{p.position}} {{p.name}} {{p.team}}</p>
