--- a/fnfl/static/css/fnfl.css
+++ b/fnfl/static/css/fnfl.css
@@ -69,3 +69,20 @@ body {
     height: 60px;
     margin: 10px;
 }
+
+.flex-container-lineups-list {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+}
+
+.flex-item-lineup {
+    width: 350px;
+    height: 350px;
+}
+
