--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -190,7 +190,7 @@
 {% endif %}
 
     <div class="flex-container">
-      <p style="font-size: 16pt">Total Score: {{total_week_score}}</p>
+      <p style="font-size: 16pt">Total Score: {{week_score}}</p>
     </div>
   </div>
 {% endblock %}
