--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -1,196 +1,1 @@
-{% extends 'fnfl/base.html' %}
-
-{% block content %}
-  <div class="container-fluid">
-{% if lineup.published_date %}
-      <div class="date">
-        {{ lineup.published_date }}
-      </div>
-{% else %} 
-      <a class="btn btn-default" href="{% url 'lineup_publish' lineup_pk=lineup.pk %}">Publish</a>
-{% endif %}
-        
-    <a class="btn btn-default" href="{% url 'lineup_edit' lineup_pk=lineup.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-    <a class="btn btn-default" href="{% url 'lineup_remove' lineup_pk=lineup.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-    <a class="btn btn-default" href="{% url 'add_player' lineup_pk=lineup.pk %}">Add Player</a>
-    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-
-    <h1>{{ lineup.week }}</h1>
-
-
-{% if qb != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-            <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=qb.pk %}">Edit QB</a></li>
-            <li><a href="{% url 'remove_player' player_pk=qb.pk %}">Remove QB</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=qb.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=qb.pk %}">Edit Score</a></li>
-          </ul>
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{qb.position}} {{qb.name}} {{qb.team}}</p>
-        <p>QB Score: {{qb_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-{% if rb1 != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-          <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=rb1.pk %}">Edit RB</a></li>
-            <li><a href="{% url 'remove_player' player_pk=rb1.pk %}">Remove RB</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=rb1.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=rb1.pk %}">Edit Score</a></li>
-          </ul>
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{rb1.position}} {{rb1.name}} {{rb1.team}}</p>
-        <p>RB Score: {{rb1_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-{% if rb2 != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-            <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=rb2.pk %}">Edit RB</a></li>
-            <li><a href="{% url 'remove_player' player_pk=rb2.pk %}">Remove RB</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=rb2.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=rb2.pk %}">Edit Score</a></li>
-          </ul>
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{rb2.position}} {{rb2.name}} {{rb2.team}}</p>
-        <p>RB Score: {{rb2_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-{% if wr1 != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-          <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=wr1.pk %}">Edit WR</a></li>
-            <li><a href="{% url 'remove_player' player_pk=wr1.pk %}">Remove WR</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=wr1.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=wr1.pk %}">Edit Score</a></li>
-          </ul>
-
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{wr1.position}} {{wr1.name}} {{wr1.team}}</p>
-        <p>WR Score: {{wr1_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-{% if wr2 != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-          <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=wr2.pk %}">Edit WR</a></li>
-            <li><a href="{% url 'remove_player' player_pk=wr2.pk %}">Remove WR</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=wr2.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=wr2.pk %}">Edit Score</a></li>
-          </ul>
-
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{wr2.position}} {{wr2.name}} {{wr2.team}}</p>
-        <p>WR Score: {{wr2_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-{% if te != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-          <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=te.pk %}">Edit TE</a></li>
-            <li><a href="{% url 'remove_player' player_pk=te.pk %}">Remove TE</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=te.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=te.pk %}">Edit Score</a></li>
-          </ul>
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{te.position}} {{te.name}} {{te.team}}</p>
-        <p>TE Score: {{te_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-{% if k != '' %}
-    <div class="flex-container">
-      <div class="flex-item-button">
-              
-        <button class="btn btn-default dropdown-toggle" type="button"
-          data-toggle="dropdown">Player Action
-          <span class="caret"></span>
-        </button>
-
-          <ul class="dropdown-menu">
-            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=k.pk %}">Edit K</a></li>
-            <li><a href="{% url 'remove_player' player_pk=k.pk %}">Remove K</a></li>
-            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=k.pk %}">Add Score</a></li>
-            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=k.pk %}">Edit Score</a></li>
-          </ul>
-
-      </div>
-
-      <div class="flex-item-text">
-        <p>{{k.position}} {{k.name}} {{k.team}}</p>
-        <p>K Score: {{k_score}}<p>
-      </div>
-    </div>
-{% endif %}
-
-    <div class="flex-container">
-      <p style="font-size: 16pt">Total Score: {{week_score}}</p>
-    </div>
-  </div>
-{% endblock %}
+{% extends 'fnfl/base.html' %}{% block content %}  <div class="container-fluid">{% if lineup.published_date %}      <div class="date">        {{ lineup.published_date }}      </div>{% else %}       <a class="btn btn-default" href="{% url 'lineup_publish' lineup_pk=lineup.pk %}">Publish</a>{% endif %}            <a class="btn btn-default" href="{% url 'lineup_edit' lineup_pk=lineup.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>    <a class="btn btn-default" href="{% url 'lineup_remove' lineup_pk=lineup.pk %}"><span class="glyphicon glyphicon-remove"></span></a>    <a class="btn btn-default" href="{% url 'add_player' lineup_pk=lineup.pk %}">Add Player</a>    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>    <h1>{{ lineup.week }}</h1>{% for player, score in players_scores %}    <div class="flex-container">      <div class="flex-item-button">                      <button class="btn btn-default dropdown-toggle" type="button"          data-toggle="dropdown">Player Action            <span class="caret"></span>        </button>          <ul class="dropdown-menu">            <li><a href="{% url 'edit_player' lineup_pk=lineup.pk player_pk=player.pk %}">Edit Player</a></li>            <li><a href="{% url 'remove_player' player_pk=player.pk %}">Remove Player</a></li>            <li><a href="{% url 'add_score' lineup_pk=lineup.pk player_pk=player.pk %}">Add Score</a></li>            <li><a href="{% url 'edit_score' lineup_pk=lineup.pk player_pk=player.pk %}">Edit Score</a></li>          </ul>      </div>      <div class="flex-item-text">        <p>{{player.position}} {{player.name}} {{player.team}}</p>        <p>Player Score: {{score}}<p>      </div>    </div>{% endfor %}    <div class="flex-container">      <p style="font-size: 16pt">Total Score: {{week_score}}</p>    </div>  </div>{% endblock %}
